[adaptive_hash_index_partitions] Port adaptive hash index partitions from 5.5, fixing bug 1

Original title:
[adaptive_hash_index_partitions] Port adaptive hash index partitions from 5.5, fixing bug 1216804 / http://bugs.mysql.com/bu

Original title:
Port adaptive hash index partitions from 5.5, fixing bug 1216804 / http://bugs.mysql.com/bug.php?id=62018 (btr_search_latch is contended on 5.6).

http://bugs.mysql.com/bug.php?id=62018 (btr_search_latch is contended
on 5.6).

There are no major algorithmic differences from the 5.5 version.  The
are minor differences from the 5.5 version:
- simplify latching changes in row_search_for_mysql() by spliting out
  a helper function trx_search_latch_lock(), by using
  trx_search_latch_release_if_reserved() where appropriate, by not
  bothering to compute an X waiters bit mask in phase 0 but checking
  whether any X waiter is present instead;
- add additional latching order enforcement code to
  sync_thread_add_level();
- some comments in surrounding code were updated to reflect the
  partitioning;
- added missing header and arg comments.  Add function attributes to
  btr_search_get_hash_index(), btr_search_get_latch().  New helper
  function btr_search_own_all().
- merged btr_search_drop_page_hash_index() with 5.6 version and
  adjusted UNIV_LIKELY/UNIV_UNLIKELY annotations to better reflect my
  expected reality;
- instead of adding an outer loop to it as in 5.5, rename
  btr_search_validate() to btr_search_validate_one_table() and add a
  new function btr_search_validate() that calls the former in a loop;
- instead of disabling UNIV_SYNC_DEBUG checks in ha_clear(),
  ha_delete_hash_node(), and ha_search_and_update_if_found_func(),
  implement a helper function ha_assert_btr_x_locked() which is then
  called from them;
- fix AHI-related code formatting in
  xtradb_internal_hash_tables_fill_table().
- expanded the sys_vars suite test
  innodb_adaptive_hash_index_partitions_basic.test;

At the same time fix bug 1216815 /
http://bugs.mysql.com/bug.php?id=69617 (5.6.12 removed UNIV_SYNC_DEBUG
from UNIV_DEBUG) by re-enabling it in univ.i.

==========================================

[adaptive_hash_index_partitions] Bug #1218347: Unnecessary overhead from persistent adaptive hash index latches

latches

Disabled persistent AHI latch code so that if row_search_for_mysql()
acquires an S latch on AHI, it is guaranteed to release it before
return. This also makes trx_search_latch_release_if_reserved() and some
ugly code in row_search_for_mysql() redundant.

This also makes it unnecessary to track multiple locks in
trx->has_search_latch, and thus it can be changed back to a boolean
value and the constraint on the maximum value of btr_search_index_num
can be removed. The latter is not done by this patch, but can be
easily changed later.

==========================================

[adaptive_hash_index_partitions] Bug #1218321: Suboptimal AHI partitioning code to access AHI latches and hash tables

hash tables

Replaced btr_search_latch_part (which was an array of pointers to
latches protecting individual AHI partitions) with btr_search_latch_arr
which is just an array of latches. This simplifies some code and makes
it more efficient.

Renamed btr_search_sys_t::hash_index to btr_search_sys_t::hash_tables to
better reflect its contents.

==========================================

[adaptive_hash_index_partitions] Bug #1218330: Adaptive hash index memory is incorrectly calculated in               SHOW EN

Original title:
Bug #1218330: Adaptive hash index memory is incorrectly calculated in               SHOW ENGINE INNODB STATUS and I_S

              SHOW ENGINE INNODB STATUS and I_S

Fixed adaptive hash index memory calculation for the
Innodb_mem_adaptive_hash status variable and SHOW ENGINE INNODB
STATUS to the correct formula: instead of taking the stats from the
first heap and then multiplying it by the number of AHI partitions,
actually walk partitions and aggregate individual stats.

==========================================

[#1610] Fix bug 1679155 / 81814 (InnoDB adaptive hash index uses a bad partitioning algorit

Original title:
[#1610] Fix bug 1679155 / 81814 (InnoDB adaptive hash index uses a bad partitioning algorithm for the real world)

by applying a patch by Alexey Kopytov at https://github.com/mysql/mysql-server/pull/122:

Bug #81814: InnoDB adaptive hash index uses a bad partitioning algorithm for the real world

This patch replaces hash-based AHI partitioning with index ID based
one.

Index ID based partitioning is better than the current bad hash
function. It is also not any worse than any 'good' hash function for
real world workloads.

Adding space IDs would only make sense if index IDs were not guaranteed
to be unique. They are unique in 5.7 and the current public release of
8.0.

(cherry picked from commit d0fb95d1cbab6670b508145954e57a1fe3383885)